--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 rand_core = "0.6.3"
-rand_chacha = "0.3.1"
+rand_chacha = { version = "0.3.1", features = ["serde1"] }
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0"
