--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ rand = "0.8.5"
 rand_core = "0.6.3"
 rand_chacha = { version = "0.3.1", features = ["serde1"] }
 serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0"
+serde_yaml = "0.8.23"
